adl-frontend/src/test/resources/unit/unsupported/error/semantic/attributes/attr1.adl
primitive attributes.attr1 {
  @SemanticError(GroupId="ATTR", ErrorId="CAST_NEGATIVE_TO_UNSIGNED")
  attribute uint8_t attr = -26 ;
  source my.c;	
}
